--- a/index.html
+++ b/index.html
@@ -1,65 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>N-Queen Problem</title>
-	<meta charset="utf-8">
-    <style>
-.button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-}
-.button3 {
-  background-color: white; 
-  color: black; 
-  border: 4px solid #f44336;
-}
+	<title></title>
+	<style type="text/css">
+		*{
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
 
-.button3:hover {
-  background-color: #f44336;
-  color: black;
-}
-body  {
-  background-image: url("https://i.pinimg.com/originals/63/64/77/636477067a9206def4911cbb9c317576.gif");
-  background-color: #cccccc;
-  background-size: cover;
-}
+
+		h1{
+			position: absolute;
+			left: 50%;
+			top:50%;
+			transform: translate(-50%,-50%);
+		}
+
+		h1
+		{
+			color: green;
+		}
 
 
 	</style>
-	<script type="text/javascript" src="nQueen.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+
 </head>
 <body>
-	<h1 style="font-family:verdana">N-Queen Problem</h1>
-	<h2 style="font-family:verdana">62109 - Abdul Basit</h2>
-	<h3 style="font-family:verdana">61839 - Duraiya Yousuf</h3>
-	<h3 style="font-family:verdana">61877 - Rahim Ahmed Khan</h3>
-	<button class="button button2" 	onclick="document.location='https://github.com/abdul-Basit-15/DAA-168-Fall-2020'">GitHub</button>
-	<div style="width: 75%; height: 05%; background-color:white; border:2px solid; border-color:red">
-		<canvas id="myChart"  width="40%" height="05%"></canvas>
-	</div>
-	<div style="width: 75%; height: 05%; background-color:white; border:2px solid; border-color:blue">
-		<canvas id="myChart2"  width="40%" height="05%"></canvas>
-	</div>
-	<div style="width: 75%; height: 05%; background-color:white; border:2px solid; border-color:red">
-		<canvas id="myChart3"  width="40%" height="05%"></canvas>
-	</div>
-	<p> 
-		<button id="btnRun" onclick="runEmAll()" class="button button3">RUN PROJECT</button>
-	</p>
-	<textarea id="ta_sol1" cols="50" rows="20"></textarea>&nbsp
-	<textarea id="ta_sol2" cols="50" rows="20"></textarea>&nbsp
-	<textarea id="ta_sol3" cols="50" rows="20"></textarea>
+
+<h1>WELCOME TO MY FIRST ASSIGNMENT</h1>
+
 </body>
 
 <script>
